--- a/about.html
+++ b/about.html
@@ -1,12 +1,230 @@
 <!doctype html>
-<html class="no-js" lang="zxx">
+<html lang="en">
 
 <head>
+    <title>About - Make My Interiors</title>
     <meta charset="utf-8">
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>about | Tradix Network</title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="manifest" href="site.webmanifest">
-    <link rel="shortcut icon" type="image/x-icon" href="assets/img/Favicon.ico">
-    <h2>work in progress</h2>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="shortcut icon " type="image/x-icon " href="assets/img/favicon1.ico">
+    <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@200;300;400;500;600;700;800&family=Mulish:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="assets/css/stylegalabt.css" />
+    <link rel="stylesheet" href="assets/css/style.css" />
+    <script src="https://kit.fontawesome.com/7707549cbe.js " crossorigin="anonymous "></script>
+
+    <body>
+        <header>
+            <div class="header-area header-transparent ">
+                <div class="main-header header-sticky ">
+                    <div class="container-fluid ">
+                        <div class="menu-wrapper d-flex align-items-center justify-content-between ">
+                            <div class="left-content d-flex align-items-center ">
+                                <div class="logo mr-45 ">
+                                    <a href="index.html "><img src="assets/img/logo/asset1.png " width="260 " height="65 " alt=" " data-pagespeed-url-hash="1320415278 " onload="pagespeed.CriticalImages.checkImageForCriticality(this); ">
+                                    </a>
+                                </div>
+
+                                <div class="main-menu d-none d-lg-block ">
+                                    <nav>
+                                        <ul id="navigation ">
+                                            <li><a class="nav-link scrollto " href="index.html ">Home</a></li>
+                                            <li><a class="nav-link scrollto " href="#services ">Services</a></li>
+                                            <li><a class="nav-link scrollto " href="#work ">Work</a></li>
+                                            <li><a class="nav-link scrollto " href="about.html ">About</a></li>
+                                            <li><a class="nav-link scrollto " href="#contact ">Contact</a></li>
+                                        </ul>
+                                    </nav>
+                                </div>
+                            </div>
+
+                            <div class="buttons ">
+
+                            </div>
+                        </div>
+
+                        <div class="col-12 ">
+                            <div class="mobile_menu d-block d-lg-none "></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <br>
+            <br>
+            <div class="site-section" id="about-section">
+                <div class="container">
+                    <div class="row ">
+                        <div class="col-12 mb-4 position-relative">
+                            <h2 class="section-title">About Us</h2>
+                        </div>
+                        <div class="col-lg-4">
+                            <p>We are one of the emerging brands in the field of interior designing. We provide customised and end to end outcomes to our customers. Make my interiors is established by a team of experts and experienced people in the field
+                                of interior designing. Honesty, work ethics, punctuality and commitment are the pillars of our foundation.</p>
+                        </div>
+                        <div class="col-lg-4">
+                            <script type="text/javascript" style="display:none">
+                                //<![CDATA[
+                                window.__mirage2 = {
+                                    petok: "2e190456dd8d1a98950add1c7c6c84e750d318d0-1654073340-1800"
+                                };
+                                //]]>
+                            </script>
+                            <script type="text/javascript" src="https://ajax.cloudflare.com/cdn-cgi/scripts/04b3eb47/cloudflare-static/mirage2.min.js"></script>
+                            <img data-cfsrc="assets/img/gallery/about.jpg" alt="Image" class="img-fluid" style="display:none;visibility:hidden;"><noscript><img src="images/about.jpg" alt="Image" class="img-fluid"></noscript>
+                        </div>
+                        <div class="col-lg-4">
+                            <p>We not only promise quality products and time commitment but also deliver these things in a good way when compared to other brands. We provide all interior related services like customised furniture, modular furniture, modular
+                                kitchen, false ceiling, civil changes work, fabrication work, electric work, paint and wallpaper, glass and door, decorative light, artefacts, curtains and all other work-related to interior designing.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
+            <div class="row">
+                <div class="column">
+                    <div class="card">
+                        <img src="img1.jpg" alt="Bhushan" style="width:100%">
+                        <div class="container">
+                            <h2>Bhushan Dehadray</h2>
+                            <p class="title">CEO &amp; Founder</p>
+                            <!-- <p>Some text that describes me lorem ipsum ipsum lorem.</p> -->
+                            <p>example@example.com</p>
+                            <p><button class="button">Contact</button></p>
+                        </div>
+                    </div>
+                </div>
+                <br>
+                <div class="column">
+                    <div class="card">
+                        <img src="img2.jpg" alt="Kiran" style="width:100%">
+                        <div class="container">
+                            <h2>Kiran Methe</h2>
+                            <p class="title">Managing Director</p>
+                            <!-- <p>Some text that describes me lorem ipsum ipsum lorem.</p> -->
+                            <p>example@example.com</p>
+                            <p><button class="button">Contact</button></p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="column">
+                    <div class="card">
+                        <img src="img3.jpg" alt="alifiya" style="width:100%">
+                        <div class="container">
+                            <h2>Aifiya Magar</h2>
+                            <p class="title">Senior Interior Designer</p>
+                            <!-- <p>Some text that describes me lorem ipsum ipsum lorem.</p> -->
+                            <p>example@example.com</p>
+                            <p><button class="button">Contact</button></p>
+                        </div>
+                    </div>
+                </div>
+                <div class="column">
+                    <div class="card">
+                        <img src="img3.jpg" alt="khushi" style="width:100%">
+                        <div class="container">
+                            <h2>Khushi Pokharna</h2>
+                            <p class="title">Junior Interior Designer</p>
+                            <!-- <p>Some text that describes me lorem ipsum ipsum lorem.</p> -->
+                            <p>example@example.com</p>
+                            <p><button class="button">Contact</button></p>
+                        </div>
+                    </div>
+                </div>
+                <div class="column">
+                    <div class="card">
+                        <img src="img3.jpg" alt="shradha" style="width:100%">
+                        <div class="container">
+                            <h2>Shradha Methe</h2>
+                            <p class="title">Accounts &amp; Finance</p>
+                            <!-- <p>Some text that describes me lorem ipsum ipsum lorem.</p> -->
+                            <p>example@example.com</p>
+                            <p><button class="button">Contact</button></p>
+                        </div>
+                    </div>
+                </div>
+                <div class="column">
+                    <div class="card">
+                        <img src="img3.jpg" alt="aditya" style="width:100%">
+                        <div class="container">
+                            <h2>Aditya Patil</h2>
+                            <p class="title">Senior Site Supervisor</p>
+                            <!-- <p>Some text that describes me lorem ipsum ipsum lorem.</p> -->
+                            <p>example@example.com</p>
+                            <p><button class="button">Contact</button></p>
+                        </div>
+                    </div>
+                </div>
+                <div class="column">
+                    <div class="card">
+                        <img src="img3.jpg" alt="Rahul" style="width:100%">
+                        <div class="container">
+                            <h2>Rahul Auti</h2>
+                            <p class="title">Site Supervisor</p>
+                            <!-- <p>Some text that describes me lorem ipsum ipsum lorem.</p> -->
+                            <p>example@example.com</p>
+                            <p><button class="button">Contact</button></p>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+
+            <footer>
+                <div class="footer-wrappper">
+                    <div class="footer-area footer-padding">
+                        <div class="container">
+                            <div class="d-flex justify-content-center">
+                                <div class="col-xl-4 col-lg-5 col-md-4 col-sm-6">
+                                    <div class="single-footer-caption mb-50">
+                                        <div class="single-footer-caption mb-30">
+                                            <div class="footer-logo mb-25">
+                                                <a href="index.html"><img src="assets/img/logo/asset1.png" width="260" height="65" alt=" Make my Interiors logo" data-pagespeed-url-hash="1320415278" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
+                                                </a>
+                                                </a>
+                                            </div>
+                                            <div class="footer-tittle">
+                                                <div class="footer-pera">
+                                                    <p>
+                                                        <h6>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eveniet a ullam aperiam.
+                                                        </h6>
+                                                    </p>
+                                                </div>
+                                            </div>
+
+                                            <div class="footer-social">
+                                                <a href="https://www.facebook.com/MakeMyInteriorsPune"><i class="fab fa-facebook-f"></i></a>
+                                                <a href="https://www.instagram.com/makemyinteriors/"><i class="fa-brands fa-instagram"></i></a>
+                                                <a href="https://www.youtube.com/makemyinteriors"><i class="fab fa-youtube"></i></a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="footer-bottom-area">
+                        <div class="container">
+                            <div class="footer-border">
+                                <div class="row d-flex align-items-center">
+                                    <div class="col-xl-12 ">
+                                        <div class="footer-copy-right text-center">
+                                            <p>Copyright &copy;
+                                                <script>
+                                                    document.write(new Date().getFullYear());
+                                                </script> All rights reserved | This template is made with <i class="fa fa-heart color-danger" aria-hidden="true"></i> by <a href="https://www.tradixnetwork.com" target="_blank" rel="nofollow noopener">Tradix Network</a>
+                                            </p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                </section>
+            </footer>
+            <div id="whatsapp-float">
+                <a title="send message" href="https://api.whatsapp.com/send?phone=919834375579&text=Hey%20MakeMyInteriors!">
+                    <i class="fa-brands fa-whatsapp fa-xl my-float"></i>
+                </a>
+            </div>
