--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="Interior at it's Best">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="manifest" href="site.webmanifest">
-    <link rel="shortcut icon " type="image/x-icon " href="assets/img/Favicon.ico ">
+    <link rel="shortcut icon " type="image/x-icon " href="assets/img/favicon1.ico">
     <link rel="stylesheet " href="assets/css/bootstrap.css " />
     <link rel="stylesheet " href="assets/css/style.css ">
     <script src="https://kit.fontawesome.com/7707549cbe.js " crossorigin="anonymous "></script>
@@ -239,7 +239,7 @@
                                     <ul id="navigation ">
                                         <li><a class="nav-link scrollto " href="index.html ">Home</a></li>
                                         <li><a class="nav-link scrollto " href="#services ">Services</a></li>
-                                        <li><a class="nav-link scrollto " href="#work ">Work</a></li>
+                                        <li><a class="nav-link scrollto " href="#work">Work</a></li>
                                         <li><a class="nav-link scrollto " href="about.html ">About</a></li>
                                         <li><a class="nav-link scrollto " href="#contact ">Contact</a></li>
                                     </ul>
@@ -381,8 +381,8 @@
                                 <h2>We design with <br> aesthetic sense <span></span></h2>
                             </div>
                             <div class="support-caption ">
-                                <p class="pera-top ">Aesthetic means shows your customer the right things in the right way.We believe that people prefer pretty things and it is central idea to the interior designing field.Aesthetic designing includes balance colors, pattern,
-                                    scale, shape & visual aspects and we Make My Interiors design with aesthetic sense.
+                                <p class="pera-top ">Aesthetic means shows your customer the right things in the right way. We believe that people prefer pretty things and it is central idea to the interior designing field. Aesthetic designing includes balance colors, pattern,
+                                    scale, shape &amp; visual aspects and we Make My Interiors design with aesthetic sense.
                                 </p>
 
 
@@ -476,7 +476,7 @@
 
                             <div class="section-tittle text-center mb-60">
                                 <h2>Our Work</h2>
-                                <p> We understand requirements & taste, We know trends, We do homework then we prepare & provide best solution to our clients.</p>
+                                <p> We understand requirements &amp; taste, We know trends, We do homework then we prepare &amp; provide best solution to our clients.</p>
                             </div>
                         </div>
                     </div>
@@ -544,7 +544,7 @@
                         <div class="col-lg-12">
                             <div class="more-pro theme-bg1 pt-30 pb-20">
                                 <div class="more-show text-center">
-                                    <a href="about.html" class="border-btn ">More Work</a>
+                                    <a href="work.html" class="border-btn ">More Work</a>
                                 </div>
                             </div>
                         </div>
@@ -561,14 +561,14 @@
                             <div class="row">
                                 <div class="col-xl-12">
                                     <div class="wantToWork-caption text-center">
-                                        <h2>Let's discuss about your interior</h2>
+                                        <h2>Book for free Consultation &amp; 3D designs</h2>
                                         <p>Even the all-powerful Pointing has no control about the <br> blindtexts it is an almost unorthographic.</p>
 
                                         <a href="tel:+919834375579" class="btn_1 "><i class="fa-solid fa-phone fa-xl"></i>+91 9834375579</a>
 
-                                        <a href="https://api.whatsapp.com/send?phone=919834375579&text=Hey%20MakeMyInteriors!" class="btn_3 "><i class="fa-brands fa-whatsapp fa-xl"></i> Get in touch</a>
-                                        <a href="https://g.page/make-my-interiors-maharashtra?" class="btn_4 "><i class="fa-solid fa-location-dot fa-xl"></i> Locate us</a>
-                                        <a href="mailto:info@makemyinteriors.in" class="btn_2 "><i class="fa-solid fa-envelope fa-xl"></i> </a>
+                                        <a href="https://api.whatsapp.com/send?phone=919834375579&text=Hey%20MakeMyInteriors!" target="_blank" class="btn_3 "><i class="fa-brands fa-whatsapp fa-xl"></i> Get in touch</a>
+                                        <a href="https://g.page/make-my-interiors-maharashtra?" target="_blank" class="btn_4 "><i class="fa-solid fa-location-dot fa-xl"></i> Locate us</a>
+                                        <a href="mailto:info@makemyinteriors.in" target="_blank" class="btn_2 "><i class="fa-solid fa-envelope fa-xl"></i> </a>
 
                                     </div>
                                 </div>
@@ -582,32 +582,32 @@
         <div class="footer-wrappper">
             <div class="footer-area footer-padding">
                 <div class="container">
-                    <div class="row justify-content-between">
+                    <div class="d-flex justify-content-center">
                         <div class="col-xl-4 col-lg-5 col-md-4 col-sm-6">
                             <div class="single-footer-caption mb-50">
                                 <div class="single-footer-caption mb-30">
                                     <div class="footer-logo mb-25">
-                                        <a href="index.html"><img src="assets/img/logo/asset2.png" width="260" height="65" alt=" Make my Interiors logo" data-pagespeed-url-hash="1320415278" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
+                                        <a href="index.html"><img src="assets/img/logo/asset1.png" width="260" height="65" alt=" Make my Interiors logo" data-pagespeed-url-hash="1320415278" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
                                         </a>
                                         </a>
                                     </div>
                                     <div class="footer-tittle">
                                         <div class="footer-pera">
-                                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eveniet a ullam aperiam.
+                                            <p>
+                                                <h6>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eveniet a ullam aperiam.</h6>
                                             </p>
                                         </div>
                                     </div>
 
                                     <div class="footer-social">
-                                        <a href="#"><i class="fab fa-twitter"></i></a>
-                                        <a href="https://bit.ly/"><i class="fab fa-facebook-f"></i></a>
-                                        <a href="#"><i class="fab fa-pinterest-p"></i></a>
+                                        <a href="https://www.facebook.com/MakeMyInteriorsPune"><i class="fab fa-facebook-f"></i></a>
+                                        <a href="https://www.instagram.com/makemyinteriors/"><i class="fa-brands fa-instagram"></i></a>
+                                        <a href="https://www.youtube.com/makemyinteriors"><i class="fab fa-youtube"></i></a>
+
                                     </div>
                                 </div>
                             </div>
                         </div>
-
-
                     </div>
                 </div>
             </div>
@@ -621,7 +621,7 @@
                                     <p>Copyright &copy;
                                         <script>
                                             document.write(new Date().getFullYear());
-                                        </script> All rights reserved | This template is made with <i class="fa fa-heart color-danger" aria-hidden="true"></i> by <a href="https://www.tradixnetwork.com" target="_blank" rel="nofollow noopener">Tradix Network</a>
+                                        </script> All rights reserved | This is made with <i class="fa fa-heart color-danger" aria-hidden="true"></i> by <a href="https://www.tradixnetwork.com" target="_blank" rel="nofollow noopener">Tradix Network</a>
                                     </p>
                                 </div>
                             </div>
