--- a/about.html
+++ b/about.html
@@ -202,7 +202,7 @@
                                     <div class="footer-tittle">
                                         <div class="footer-pera">
                                             <p>
-                                                <h6>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eveniet a ullam aperiam.
+                                                <h6>Architecture is really about well-being. I think that people want to feel good in a space.
                                                 </h6>
                                             </p>
                                         </div>
