--- a/about.html
+++ b/about.html
@@ -87,13 +87,14 @@
     <div class="row">
         <div class="column">
             <div class="card">
-                <img src="img1.jpg" alt="Bhushan" style="width:100%">
+                <img src="assets/img/team/bhushan.jpeg" alt="Bhushan" style="width:100%">
                 <div class="container">
                     <h2>Bhushan Dehadray</h2>
                     <p class="title">CEO &amp; Founder</p>
-                    <!-- <p>Some text that describes me lorem ipsum ipsum lorem.</p> -->
-                    <p>example@example.com</p>
-                    <p><button class="button">Contact</button></p>
+                    <p>Bhshan is a professional interior designer with great Sense of resposibility , Work ethics and integrity .He believes in providing Best quality work within timeline . He work hard to make this organisation realiable and trustworthy
+                        . He Value and respects the Hard earned Money of his Clients and deliver Best possible Interior designing Services.</p>
+                    <!-- <p>example@example.com</p>
+                    <p><button class="button">Contact</button></p> -->
                 </div>
             </div>
         </div>
@@ -104,46 +105,48 @@
                 <div class="container">
                     <h2>Kiran Methe</h2>
                     <p class="title">Managing Director</p>
-                    <!-- <p>Some text that describes me lorem ipsum ipsum lorem.</p> -->
-                    <p>example@example.com</p>
-                    <p><button class="button">Contact</button></p>
-                </div>
-            </div>
-        </div>
-        <div class="column">
-            <div class="card">
-                <img src="img2.jpg" alt="sakshi" style="width:100%">
-                <div class="container">
-                    <h2>Sakshi Agarwal</h2>
-                    <p class="title">Marketing Head</p>
-                    <!-- <p>Some text that describes me lorem ipsum ipsum lorem.</p> -->
-                    <p>example@example.com</p>
-                    <p><button class="button">Contact</button></p>
+                    <p>Being a MD, she oversees various administrative aspects of an interior design projects. She Plan the timeline, helps in determine the budget and successfully complete the projects.</p>
+                    <!-- <p>example@example.com</p>
+                    <p><button class="button">Contact</button></p> -->
                 </div>
             </div>
         </div>
 
         <div class="column">
             <div class="card">
-                <img src="img3.jpg" alt="alifiya" style="width:100%">
+                <img src="assets/img/team/alifiya.jpeg" alt="alifiya" style="width:100%">
                 <div class="container">
                     <h2>Alifiya Magar</h2>
                     <p class="title">Senior Interior Designer</p>
-                    <!-- <p>Some text that describes me lorem ipsum ipsum lorem.</p> -->
-                    <p>example@example.com</p>
-                    <p><button class="button">Contact</button></p>
+                    <p>She is innovative interior designer with year's of experience in project management, space planning & computer aided design. She lead designing part for Make My Interior.</p>
+                    <!-- <p>example@example.com</p>
+                    <p><button class="button">Contact</button></p> -->
                 </div>
             </div>
         </div>
         <div class="column">
             <div class="card">
-                <img src="img3.jpg" alt="khushi" style="width:100%">
+                <img src="assets/img/team/hozefa.jpeg" alt="hozefa" style="width:100%">
+                <div class="container">
+                    <h2>Hozefa Ajna</h2>
+                    <p class="title">Interior Designer</p>
+                    <p>She is specialize in making things appealing to the eyes. Her designs are based on accurate requirement.</p>
+                    <!-- <p>example@example.com</p>
+                    <p><button class="button">Contact</button></p> -->
+                </div>
+            </div>
+        </div>
+
+
+        <div class="column">
+            <div class="card">
+                <img src="assets/img/team/khushi.jpeg" alt="khushi" style="width:100%">
                 <div class="container">
                     <h2>Khushi Pokharna</h2>
                     <p class="title">Junior Interior Designer</p>
-                    <!-- <p>Some text that describes me lorem ipsum ipsum lorem.</p> -->
-                    <p>example@example.com</p>
-                    <p><button class="button">Contact</button></p>
+                    <p>She is a young, vibrant & creative designer who believe in beautiful interiors to transform daily life. She look after design & execution parallelly.</p>
+                    <!-- <p>example@example.com</p>
+                    <p><button class="button">Contact</button></p> -->
                 </div>
             </div>
         </div>
@@ -154,8 +157,8 @@
                     <h2>Shraddha Patil</h2>
                     <p class="title">Interior Designer</p>
                     <!-- <p>Some text that describes me lorem ipsum ipsum lorem.</p> -->
-                    <p>example@example.com</p>
-                    <p><button class="button">Contact</button></p>
+                    <!-- <p>example@example.com</p>
+                    <p><button class="button">Contact</button></p> -->
                 </div>
             </div>
         </div>
@@ -178,8 +181,8 @@
                     <h2>Rahul Bansal</h2>
                     <p class="title">Interior Designer</p>
                     <!-- <p>Some text that describes me lorem ipsum ipsum lorem.</p> -->
-                    <p>example@example.com</p>
-                    <p><button class="button">Contact</button></p>
+                    <!-- <p>example@example.com</p> -->
+                    <!-- <p><button class="button">Contact</button></p> -->
                 </div>
             </div>
         </div>
